# mini-games

./: .gitignore  001-AverageScore.cpp  002-MenuChooser.cpp  003-MenuChooserEnum.cpp  004-GuessMyNumberPCguess.cpp  005-GuessMyNumberUserGuess.cpp  006-WordJumble.cpp  007-WordJumbleWithScore.cpp  008-UserGameList.cpp  009-Hangman.cpp  010-MadLib.cpp  011-MadLibPtr.cpp  012-Tamagochi-critter.cpp  012-Tamagochi-critter.h  012-Tamagochi-main.cpp  013-GameLobby-Lobby.cpp  013-GameLobby-Lobby.h  013-GameLobby-main.cpp  013-GameLobby-player.cpp  013-GameLobby-player.h  CMakeLists.txt
BlackJack/: 014-BlackJack-Card.cpp  014-BlackJack-Card.h  014-BlackJack-Deck.cpp  014-BlackJack-Deck.h  014-BlackJack-Game.cpp  014-BlackJack-Game.h  014-BlackJack-GenericPlayer.cpp  014-BlackJack-GenericPlayer.h  014-BlackJack-Hand.cpp  014-BlackJack-Hand.h  014-BlackJack-House.cpp  014-BlackJack-House.h  014-BlackJack-Player.cpp  014-BlackJack-Player.h  014-BlackJack-main.cpp  BlackJack  CMakeLists.txt
